--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<div>
-    <h1>This domain is in sale. Contact to newagen@daum.net</h1>
+    <h1>This domain is in sale.
+		Contact to newagen@daum.net</h1>
   </div>
 </body>
 </html>
