--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div>
-    <h1>This domain is in sale.
+    <h1>This domain is in sale. <br>
 		Contact to newagen@daum.net</h1>
   </div>
 </body>
