--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 	<div>
     <h1>This domain is in sale. <br>
-		Contact to newagen@daum.net</h1>
+		Contact to newagen@daum.net<br>
+		Arama~</h1>
   </div>
 </body>
 </html>
